# Panel_Calculator

./: weather_analysis.py  Описание работы программы.docx
qt_project/: CMakeLists.txt  main.cpp  panelcalculator.cpp  panelcalculator.h  panelcalculator.ui
